option java_package = "nta.med.kcck.api.rpc.proto";
option java_outer_classname = "BookingModelProto";

message BookingExamInfo {
    required string patient_code 			= 1;
    required string patient_name 			= 2;
	optional string patient_name_furigana 	= 3;
	optional string phone_number 			= 4;
	optional int32 department_id 			= 5;
	optional string department_code 		= 6;
    optional string department_name 		= 7;
	optional int32 doctor_id 				= 8;
	optional string doctor_code 			= 9;
	optional string doctor_name 			= 10;
    optional string reservation_date 		= 11;
    optional string reservation_time 		= 12;
    optional string reservation_code 		= 13;
    optional string patient_pwd 			= 14;
    optional string email 					= 15;
    optional string hosp_code 				= 16;
    optional Action action 					= 17;
    optional bool is_mss_request 			= 18;
	optional string birth 					= 19;
	optional string sex 					= 20;
	optional string reser_yn 				= 21;
    enum Action { BOOKING = 0; CHANGE_BOOKING = 1; CANCEL_BOOKING = 3; }
}